--- a/market-list/client/index.html
+++ b/market-list/client/index.html
@@ -37,7 +37,7 @@
                 <th>Nome</th>
                 <th>Quantidade</th>
                 <th>Valor</th>
-                <th><img src="https://cdn-icons-png.flaticon.com/512/126/126468.png" width="15px" height="15px"></th>
+                <th colspan="2" id="settings_icon">⚙️</th>
             </tr>
         </table>
     </section>
